# cookiecutter-python-project

./: LICENCE.txt  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_name}}/source/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: version.py
