[project]
name = "{{cookiecutter.project_name}}"
# requires-python = ">= 3.11"
dynamic = ["version"]
authors = [
    { name = "{{cookiecutter.author}}", email = "systems+{{cookiecutter.project_name}}@sixty-north.com" },
]
description = "{{cookiecutter.short_description}}"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "bump-my-version"]
doc = ["sphinx", "sphinx-rtd-theme"]
test = ["pytest"]

[project.urls]
repository = "{{cookiecutter.project_url}}"

[tool.setuptools.dynamic]
version = { attr = "{{cookiecutter.project_name}}.version.__version__" }

[tool.setuptools.packages.find]
where = ["source"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
norecursedirs="tests/helpers"

[tool.bumpversion]
current_version = "0.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag = true
commit = true
message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "source/{{cookiecutter.project_name}}/version.py"

[tool.ruff]
line-length = 120
